force-app/main/default/objects/Job_Mobilization__c/Job_Mobilization__c.object-meta.xml
<CustomObject>
    <label>Job Mobilization</label>
    <nameField>
        <label>Mobilization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Mobilizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>