force-app/main/default/objects/Job_Mobilization__c/fields/Approximate_Quantities_of_Mobilization__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Quantities_of_Mobilization__c</fullName>
    <label>Approximate Quantities of Mobilization</label>
    <type>TextArea</type>
</CustomField>