force-app/main/default/objects/Job_Mobilization__c/fields/Proposal_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Discovery__c</fullName>
    <label>Proposal Discovery</label>
    <referenceTo>Proposal_Discovery__c</referenceTo>
    <relationshipLabel>Job Mobilizations</relationshipLabel>
    <relationshipName>Job_Mobilizations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>