force-app/main/default/objects/Job_Mobilization__c/fields/Types_of_Mobilization__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Mobilization__c</fullName>
    <label>Types of Mobilization</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gplvs_Main_Services</valueSetName>
    </valueSet>
</CustomField>